--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
             <li><strong>Image Captioning with Deep Learning</strong>: AI system that generates image captions using VGG16 for feature extraction and LSTM for sequence modeling. Includes beam search and Matplotlib visualization.</li>
             <li><strong>Hospital Finder App</strong>: Android app to locate nearby hospitals using Google Maps & Places APIs. Built with Java, Firebase Realtime DB, and Android Studio.</li>
-            <li><strong>Movie Recommendation System</strong>: This project builds a movie recommendation system using content-based filtering by applying TF-IDF vectorization and cosine similarity on movie features such as genre, keywords, and overview, implemented with NumPy, pandas, and scikit-learn.</li>
+            <li><strong><a href="https://github.com/shashankyc2002/MOVIE_RECOMENDATION/">Movie Recommendation System</a></strong>: This project builds a movie recommendation system using content-based filtering by applying TF-IDF vectorization and cosine similarity on movie features such as genre, keywords, and overview, implemented with NumPy, pandas, and scikit-learn.</li>
         </ul>
     </section>
 
